[tool.poetry]
name = "tel-bot"
version = "0.1.0"
description = ""
authors = ["D-Diyazzz <diyazzz.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.14.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
